Fixing some vertical alignment issues.

--- a/web/beats.css
+++ b/web/beats.css
@@ -71,6 +71,12 @@ img#github-banner {
   line-height: 36px;
 }
 
+.content-box h3 {
+  margin: 0.0em 0.0em 1.5em 0.0em;
+  font-size: 1.0em;
+  line-height: 1.5em;
+}
+
 .content-box a {
   color: #00b12e;
 }
@@ -106,8 +112,23 @@ code {
   line-height: 16px;
 }
 
-li {
-  list-style-type: square;
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+
+ul li {
+  list-style-type: none;
+  line-height: 1.5em;
+}
+
+ul li.drumkit {
+  margin-bottom: 3.0em;
+}
+
+ul.sample-list li {
+  font-size: 24px;
+  line-height: 36px;
 }
 
 label {
@@ -117,6 +138,7 @@ label {
 
 audio {
   width: 50%;
+  vertical-align: top;
 }
 
 div#about {
